# sample-autonomous-cloud-coding-agents

./: .dockerignore  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  mise.toml  package.json
.abca/commands/: commit.md  review_pr.md
.cursor/commands/: commit.md  review_pr.md
.github/: dependabot.yml  zizmor.yml
.github/workflows/: build.yml  docs.yml  pull-request-lint.yml  security.yml
.threat-composer/20260526-1924/: threatmodel.tc.json
agent/: Dockerfile  README.md  mise.toml  pyproject.toml  run.sh
agent/policies/: hard_deny.cedar  soft_deny.cedar
agent/src/: attachments.py  channel_mcp.py  config.py  hooks.py  linear_reactions.py  models.py  nudge_reader.py  pipeline.py  policy.py  progress_writer.py  prompt_builder.py  runner.py  server.py  shell.py  task_state.py  telemetry.py
agent/src/prompts/: base.py
agent/tests/: test_attachments.py  test_cancel_hook.py  test_cedar_parity.py  test_cedarpy_annotations_contract.py  test_channel_mcp.py  test_config.py  test_hooks.py  test_linear_reactions.py  test_models.py  test_nudge_hook.py  test_nudge_reader.py  test_pipeline.py  test_pipeline_outcomes.py  test_policy.py  test_policy_three_outcome.py  test_poll_for_decision.py  test_progress_writer.py  test_runner.py  test_server.py  test_task_state.py  test_telemetry_redaction.py  test_trace_key_contract.py  test_trace_upload.py
cdk/: eslint.config.mjs  mise.toml  package.json  tsconfig.json
cdk/bootstrap/: BOOTSTRAP_HASH  bootstrap-template.yaml
cdk/scripts/: generate-bootstrap-artifacts.ts  generate-bootstrap-template.ts
cdk/src/: main.ts
cli/: README.md  eslint.config.mjs  mise.toml  package.json  tsconfig.json
cli/src/: agentcore-identity.ts  api-client.ts  auth.ts  config.ts  format.ts  linear-oauth.ts  oauth-callback-server.ts  types.ts  wait.ts
cli/test/: agentcore-identity.test.ts  api-client.test.ts  auth.test.ts  format-status-snapshot.test.ts  format.test.ts  linear-oauth.test.ts  oauth-callback-server.test.ts
contracts/: constants.json  constants.md
contracts/cedar-parity/: README.md  hard-deny-rm-slash.json  multi-match-deny-force-push-main.json  no-match-permit-read.json  single-match-deny-force-push.json  soft-deny-write-env-file.json
docs/: astro.config.mjs  package.json
docs/abca-plugin/: README.md
docs/decisions/: 001-stacked-pull-requests.md  003-contribution-governance.md  004-tabula-rasa-documentation.md  005-feedback-loop.md  006-feature-flags.md  007-knowledge-acquisition.md  008-definition-of-done.md  009-security-posture-dev-agents.md  010-error-recovery.md  011-conflict-resolution.md  012-operational-knowledge-stack.md  013-tiered-validation-pyramid.md  README.md
docs/design/: API_CONTRACT.md  ARCHITECTURE.md  ATTACHMENTS.md  CEDAR_HITL_GATES.md  COST_MODEL.md  DEPLOYMENT_ROLES.md  INTERACTIVE_AGENTS.md  MEMORY.md  ORCHESTRATOR.md  SECURITY.md  VISION.md
docs/diagrams/: interactive-agents-phases.drawio  phase3-cedar-hitl.drawio
docs/guides/: CEDAR_POLICY_GUIDE.md  DEPLOYMENT_GUIDE.md  DEPLOY_PREVIEW_SCREENSHOTS_GUIDE.md  DEVELOPER_GUIDE.md  LINEAR_SETUP_GUIDE.md  QUICK_START.md  ROADMAP.md  SLACK_SETUP_GUIDE.md  (+2 more)
scripts/: check-constants-sync.ts  check-types-sync.ts  sync-abca-commands.mjs
(+282 files in other folders)
